--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -5,6 +5,9 @@ on:
     types:
       - created
 
+permissions:
+  contents: write
+
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
@@ -22,29 +25,17 @@ jobs:
       run: |
         mkdir -p dist
         GOOS=linux GOARCH=amd64 go build -o dist/memkill-linux-amd64 main.go
-      # GOOS=darwin GOARCH=amd64 go build -o dist/memkill-darwin-amd64 main.go
-      # GOOS=windows GOARCH=amd64 go build -o dist/memkill-windows-amd64.exe main.go
+
+    - name: Install GitHub CLI
+      run: sudo apt-get install -y gh
+
+    - name: Authenticate with GitHub CLI
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        echo $GITHUB_TOKEN | gh auth login --with-token
 
     - name: Upload Linux binary
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: dist/memkill-linux-amd64
-        asset_name: memkill-linux-amd64
-        asset_content_type: application/octet-stream
-
-    # - name: Upload macOS binary
-    #   uses: actions/upload-release-asset@v1
-    #   with:
-    #     upload_url: ${{ github.event.release.upload_url }}
-    #     asset_path: dist/memkill-darwin-amd64
-    #     asset_name: memkill-darwin-amd64
-    #     asset_content_type: application/octet-stream
-
-    # - name: Upload Windows binary
-    #   uses: actions/upload-release-asset@v1
-    #   with:
-    #     upload_url: ${{ github.event.release.upload_url }}
-    #     asset_path: dist/memkill-windows-amd64.exe
-    #     asset_name: memkill-windows-amd64.exe
-    #     asset_content_type: application/octet-stream
+      run: gh release upload ${{ github.event.release.tag_name }} dist/memkill-linux-amd64 --clobber
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
